# ContinuousMarkovChains

./: CMakeLists.txt  Makefile  README.md  kolmogorov_equations.tex  main.cpp  markov_chains_concepts.md  output.txt  state_graph_task1.dot  state_graph_task2.dot  transition_graph_task1.dot  transition_graph_task2.dot
docs/: AlexandrovMA.aux  AlexandrovMA.tex  AlexandrovMA.toc  Makefile  pgfplotsJS.djs  utf8gost705u.bst
docs/doc-spec/: 01titlepage.tex  common_preamble.tex  common_title.tex  title_common.aux
docs/parts/: 0_task.tex  1_first.tex  2_second.tex
include/: DotGraphGenerator.h  GnuplotPlotter.h  MarkovModel.h  RepairableMarkovModel.h  RepairableSimulator.h  RepairableSystem.h  RepairableSystemParams.h  RungeKuttaSolver.h  Simulator.h  System.h  SystemParams.h
notes/: notes.md
src/: AggregatedPlotter.cpp  DotGraphGenerator.cpp  GnuplotPlotter.cpp  HistogramPlotter.cpp  MarkovModel.cpp  RepairableMarkovModel.cpp  RepairableSimulator.cpp  RepairableSystem.cpp  RungeKuttaSolver.cpp  Simulator.cpp  System.cpp
tests/: CMakeLists.txt  test_project_template.cpp
